# organizers-rucksack

./: .gitignore  README.md  environment.yml  pyproject.toml
_data/: README.md
_private/: README.md
app/: README.md  dropbox_sync.py  helpers.py  load_config.py  pretalx.py
app/config/: __init__.py  config.yml
projects/berlin-22/: video.py
projects/europython-2022/: config.yml  main.py  update_data.py
projects/template-project/: config.yml  main.py
